--- a/package.json
+++ b/package.json
@@ -33,23 +33,23 @@
     "npm": ">= 3"
   },
   "dependencies": {
-    "@angular/animations": "^4.1.0",
-    "@angular/common": "^4.1.0",
-    "@angular/compiler": "^4.1.0",
-    "@angular/compiler-cli": "^4.1.0",
-    "@angular/core": "^4.1.0",
-    "@angular/forms": "^4.1.0",
-    "@angular/http": "^4.1.0",
-    "@angular/platform-browser": "^4.1.0",
-    "@angular/platform-browser-dynamic": "^4.1.0",
-    "@angular/platform-server": "^4.1.0",
-    "@angular/router": "^4.1.0",
-    "@angular/upgrade": "^4.1.0",
-    "angular-in-memory-web-api": "^0.3.1",
+    "@angular/animations": "^4.2.0-rc.0",
+    "@angular/common": "^4.2.0-rc.0",
+    "@angular/compiler": "^4.2.0-rc.0",
+    "@angular/compiler-cli": "^4.2.0-rc.0",
+    "@angular/core": "^4.2.0-rc.0",
+    "@angular/forms": "^4.2.0-rc.0",
+    "@angular/http": "^4.2.0-rc.0",
+    "@angular/platform-browser": "^4.2.0-rc.0",
+    "@angular/platform-browser-dynamic": "^4.2.0-rc.0",
+    "@angular/platform-server": "^4.2.0-rc.0",
+    "@angular/router": "^4.2.0-rc.0",
+    "@angular/upgrade": "^4.2.0-rc.0",
+    "angular-in-memory-web-api": "^0.3.2",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.3.0",
-    "zone.js": "^0.8.9"
+    "rxjs": "^5.4.0",
+    "zone.js": "^0.8.11"
   },
   "devDependencies": {
     "@ngtools/webpack": "^1.3.0",
