--- a/package.json
+++ b/package.json
@@ -52,21 +52,21 @@
     "zone.js": "^0.8.11"
   },
   "devDependencies": {
-    "@ngtools/webpack": "^1.3.0",
+    "@ngtools/webpack": "^1.3.1",
     "@types/core-js": "^0.9.36",
     "@types/jasmine": "^2.5.46",
-    "@types/node": "^7.0.14",
-    "@types/selenium-webdriver": "^3.0.0",
+    "@types/node": "^7.0.21",
+    "@types/selenium-webdriver": "^3.0.4",
     "angular-router-loader": "^0.6.0",
     "angular2-template-loader": "^0.6.2",
-    "awesome-typescript-loader": "^3.0.4-rc.2",
+    "awesome-typescript-loader": "^3.1.3",
     "codelyzer": "^3.0.0-beta.1",
     "compression-webpack-plugin": "^0.4.0",
     "copy-webpack-plugin": "^4.0.1",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "istanbul-instrumenter-loader": "^2.0.0",
-    "jasmine-core": "^2.6.1",
+    "jasmine-core": "^2.6.2",
     "json-loader": "^0.5.4",
     "karma": "^1.4.1",
     "karma-chrome-launcher": "^2.0.0",
@@ -75,20 +75,20 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.2",
     "node-sass": "^4.1.1",
-    "protractor": "^5.1.1",
+    "protractor": "^5.1.2",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.0",
-    "sass-loader": "^6.0.2",
+    "sass-loader": "^6.0.5",
     "selenium-webdriver": "^3.3.0",
     "source-map-loader": "^0.2.1",
     "ts-helpers": "^1.1.2",
     "ts-loader": "^2.0.3",
-    "ts-node": "^3.0.2",
+    "ts-node": "^3.0.4",
     "tslint": "^4.3.1",
     "tslint-loader": "^3.3.0",
-    "typescript": "^2.2.2",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.2",
+    "typescript": "^2.3.2",
+    "webpack": "^2.5.1",
+    "webpack-dev-server": "^2.4.5",
     "webpack-md5-hash": "0.0.5",
     "webpack-merge": "^4.1.0"
   }
