--- a/package.json
+++ b/package.json
@@ -33,40 +33,40 @@
     "npm": ">= 3"
   },
   "dependencies": {
-    "@angular/animations": "^4.2.0-rc.2",
-    "@angular/common": "^4.2.0-rc.2",
-    "@angular/compiler": "^4.2.0-rc.2",
-    "@angular/compiler-cli": "^4.2.0-rc.2",
-    "@angular/core": "^4.2.0-rc.2",
-    "@angular/forms": "^4.2.0-rc.2",
-    "@angular/http": "^4.2.0-rc.2",
-    "@angular/platform-browser": "^4.2.0-rc.2",
-    "@angular/platform-browser-dynamic": "^4.2.0-rc.2",
-    "@angular/platform-server": "^4.2.0-rc.2",
-    "@angular/router": "^4.2.0-rc.2",
-    "@angular/upgrade": "^4.2.0-rc.2",
+    "@angular/animations": "^4.2.3",
+    "@angular/common": "^4.2.3",
+    "@angular/compiler": "^4.2.3",
+    "@angular/compiler-cli": "^4.2.3",
+    "@angular/core": "^4.2.3",
+    "@angular/forms": "^4.2.3",
+    "@angular/http": "^4.2.3",
+    "@angular/platform-browser": "^4.2.3",
+    "@angular/platform-browser-dynamic": "^4.2.3",
+    "@angular/platform-server": "^4.2.3",
+    "@angular/router": "^4.2.3",
+    "@angular/upgrade": "^4.2.3",
     "angular-in-memory-web-api": "^0.3.2",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.4.0",
-    "zone.js": "^0.8.11"
+    "rxjs": "^5.4.1",
+    "zone.js": "^0.8.12"
   },
   "devDependencies": {
-    "@ngtools/webpack": "^1.3.3",
+    "@ngtools/webpack": "^1.4.1",
     "@types/core-js": "^0.9.36",
-    "@types/jasmine": "^2.5.46",
-    "@types/node": "^7.0.22",
+    "@types/jasmine": "^2.5.52",
+    "@types/node": "^7.0.32",
     "@types/selenium-webdriver": "^3.0.4",
     "angular-router-loader": "^0.6.0",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.1.3",
-    "codelyzer": "^3.0.0-beta.1",
+    "codelyzer": "^3.1.1",
     "compression-webpack-plugin": "^0.4.0",
     "copy-webpack-plugin": "^4.0.1",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "istanbul-instrumenter-loader": "^2.0.0",
-    "jasmine-core": "^2.6.2",
+    "jasmine-core": "^2.6.4",
     "json-loader": "^0.5.4",
     "karma": "^1.4.1",
     "karma-chrome-launcher": "^2.1.1",
@@ -78,17 +78,17 @@
     "protractor": "^5.1.2",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.0",
-    "sass-loader": "^6.0.5",
+    "sass-loader": "^6.0.6",
     "selenium-webdriver": "^3.3.0",
     "source-map-loader": "^0.2.1",
     "ts-helpers": "^1.1.2",
     "ts-loader": "^2.1.0",
-    "ts-node": "^3.0.4",
+    "ts-node": "^3.0.6",
     "tslint": "^4.3.1",
     "tslint-loader": "^3.3.0",
-    "typescript": "^2.3.2",
-    "webpack": "^2.5.1",
-    "webpack-dev-server": "^2.4.5",
+    "typescript": "^2.3.4",
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^2.5.0",
     "webpack-md5-hash": "0.0.5",
     "webpack-merge": "^4.1.0"
   }
