--- a/package.json
+++ b/package.json
@@ -33,18 +33,18 @@
     "npm": ">= 3"
   },
   "dependencies": {
-    "@angular/animations": "^4.2.3",
-    "@angular/common": "^4.2.3",
-    "@angular/compiler": "^4.2.3",
-    "@angular/compiler-cli": "^4.2.3",
-    "@angular/core": "^4.2.3",
-    "@angular/forms": "^4.2.3",
-    "@angular/http": "^4.2.3",
-    "@angular/platform-browser": "^4.2.3",
-    "@angular/platform-browser-dynamic": "^4.2.3",
-    "@angular/platform-server": "^4.2.3",
-    "@angular/router": "^4.2.3",
-    "@angular/upgrade": "^4.2.3",
+    "@angular/animations": "^4.3.0-beta.0",
+    "@angular/common": "^4.3.0-beta.0",
+    "@angular/compiler": "^4.3.0-beta.0",
+    "@angular/compiler-cli": "^4.3.0-beta.0",
+    "@angular/core": "^4.3.0-beta.0",
+    "@angular/forms": "^4.3.0-beta.0",
+    "@angular/http": "^4.3.0-beta.0",
+    "@angular/platform-browser": "^4.3.0-beta.0",
+    "@angular/platform-browser-dynamic": "^4.3.0-beta.0",
+    "@angular/platform-server": "^4.3.0-beta.0",
+    "@angular/router": "^4.3.0-beta.0",
+    "@angular/upgrade": "^4.3.0-beta.0",
     "angular-in-memory-web-api": "^0.3.2",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.10",
