--- a/package.json
+++ b/package.json
@@ -29,15 +29,15 @@
     "npm": ">= 3"
   },
   "dependencies": {
-    "@angular/common": "^4.3.0-beta.1",
-    "@angular/compiler": "^4.3.0-beta.1",
-    "@angular/compiler-cli": "^4.3.0-beta.1",
-    "@angular/core": "^4.3.0-beta.1",
-    "@angular/forms": "^4.3.0-beta.1",
-    "@angular/http": "^4.3.0-beta.1",
-    "@angular/platform-browser": "^4.3.0-beta.1",
-    "@angular/platform-browser-dynamic": "^4.3.0-beta.1",
-    "@angular/router": "^4.3.0-beta.1",
+    "@angular/common": "^4.3.0-rc.0",
+    "@angular/compiler": "^4.3.0-rc.0",
+    "@angular/compiler-cli": "^4.3.0-rc.0",
+    "@angular/core": "^4.3.0-rc.0",
+    "@angular/forms": "^4.3.0-rc.0",
+    "@angular/http": "^4.3.0-rc.0",
+    "@angular/platform-browser": "^4.3.0-rc.0",
+    "@angular/platform-browser-dynamic": "^4.3.0-rc.0",
+    "@angular/router": "^4.3.0-rc.0",
     "angular-in-memory-web-api": "^0.3.2",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.10",
@@ -51,7 +51,7 @@
     "angular-router-loader": "^0.6.0",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.1.3",
-    "codelyzer": "^3.1.1",
+    "codelyzer": "^3.1.2",
     "compression-webpack-plugin": "^0.4.0",
     "copy-webpack-plugin": "^4.0.1",
     "html-loader": "^0.4.5",
@@ -63,12 +63,12 @@
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.1",
     "ts-helpers": "^1.1.2",
-    "ts-loader": "^2.2.1",
-    "ts-node": "^3.1.0",
+    "ts-loader": "^2.2.2",
+    "ts-node": "^3.2.0",
     "tslint": "^4.3.1",
     "tslint-loader": "^3.3.0",
     "typescript": "^2.4.1",
-    "webpack": "^3.0.0",
+    "webpack": "^3.1.0",
     "webpack-dev-server": "^2.5.0",
     "webpack-md5-hash": "0.0.5",
     "webpack-merge": "^4.1.0"
