--- a/package.json
+++ b/package.json
@@ -29,23 +29,23 @@
     "npm": ">= 3"
   },
   "dependencies": {
-    "@angular/common": "4.3.0-rc.0",
-    "@angular/compiler": "4.3.0-rc.0",
-    "@angular/compiler-cli": "4.3.0-rc.0",
-    "@angular/core": "4.3.0-rc.0",
-    "@angular/forms": "4.3.0-rc.0",
-    "@angular/http": "4.3.0-rc.0",
-    "@angular/platform-browser": "4.3.0-rc.0",
-    "@angular/platform-browser-dynamic": "4.3.0-rc.0",
-    "@angular/router": "4.3.0-rc.0",
+    "@angular/common": "5.0.0-beta.1",
+    "@angular/compiler": "5.0.0-beta.1",
+    "@angular/compiler-cli": "5.0.0-beta.1",
+    "@angular/core": "5.0.0-beta.1",
+    "@angular/forms": "5.0.0-beta.1",
+    "@angular/http": "5.0.0-beta.1",
+    "@angular/platform-browser": "5.0.0-beta.1",
+    "@angular/platform-browser-dynamic": "5.0.0-beta.1",
+    "@angular/router": "5.0.0-beta.1",
     "angular-in-memory-web-api": "^0.3.2",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.2",
-    "zone.js": "0.8.12"
+    "zone.js": "0.8.16"
   },
   "devDependencies": {
-    "@ngtools/webpack": "^1.5.1",
+    "@ngtools/webpack": "^1.6.0-rc.1",
     "@types/core-js": "^0.9.42",
     "@types/node": "^7.0.32",
     "angular-router-loader": "^0.6.0",
@@ -67,8 +67,8 @@
     "ts-node": "^3.2.0",
     "tslint": "^4.3.1",
     "tslint-loader": "^3.3.0",
-    "typescript": "^2.4.1",
-    "webpack": "^3.2.0",
+    "typescript": "^2.4.2",
+    "webpack": "^3.4.0",
     "webpack-dev-server": "^2.5.0",
     "webpack-md5-hash": "0.0.5",
     "webpack-merge": "^4.1.0"
