--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@angular/compiler-cli": "5.0.0-beta.1",
     "@angular/core": "5.0.0-beta.1",
     "@angular/forms": "5.0.0-beta.1",
-    "@angular/http": "5.0.0-beta.1",
+    "@angular/http": "^5.0.0-beta.1",
     "@angular/platform-browser": "5.0.0-beta.1",
     "@angular/platform-browser-dynamic": "5.0.0-beta.1",
     "@angular/router": "5.0.0-beta.1",
