--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "build:local:was": "NODE_ENV=local-server node ./node_modules/.bin/webpack --config client-config/webpack.dev.js --progress --profile --colors --display-error-details --display-cached --hide-modules && npm run dist-to-was",
     "build:prod": "NODE_ENV=prod node ./node_modules/.bin/webpack --config client-config/webpack.prod.js --progress --profile --colors --display-error-details --display-cached --hide-modules",
     "build:aot": "NODE_ENV=prod node ./node_modules/.bin/webpack --config client-config/webpack.aot.js --progress --profile --colors --display-error-details --display-cached --hide-modules",
-    "webdriver-manager": "./node_modules/.bin/webdriver-manager",
-    "webdriver:update": "npm run webdriver-manager update",
-    "webdriver:start": "npm run webdriver-manager start",
-    "pree2e": "npm run webdriver:update -- --standalone"
+    "test": "npm run test:watch",
+    "test:unit": "jest",
+    "test:watch": "jest --watch",
+    "test:prod": "jest --collectCoverage=true"
   },
   "author": "jazzyredface",
   "license": "ISC",
@@ -57,6 +57,8 @@
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.29.0",
     "json-loader": "^0.5.4",
+    "jest": "^20.0.4",
+    "jest-preset-angular": "^2.0.5",
     "node-sass": "^4.1.1",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.0",
@@ -72,5 +74,23 @@
     "webpack-dev-server": "^2.5.0",
     "webpack-md5-hash": "0.0.5",
     "webpack-merge": "^4.1.0"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupTestFrameworkScriptFile": "<rootDir>/client-config/setupJest.ts",
+    "globals": {
+      "ts-jest": "./tsconfig.spec.json",
+      "__TRANSFORM_HTML__": true
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!clarity-angular)"
+    ],
+    "verbose": false,
+    "collectCoverageFrom": [
+      "src/**/*.{ts,js}",
+      "!**/assets/**",
+      "!**/node_modules/**",
+      "!src/**/*.spec.ts"
+    ]
   }
 }
