--- a/package.json
+++ b/package.json
@@ -38,8 +38,11 @@
     "@angular/platform-browser": "5.0.0-beta.1",
     "@angular/platform-browser-dynamic": "5.0.0-beta.1",
     "@angular/router": "5.0.0-beta.1",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^4.0.2",
     "angular-in-memory-web-api": "^0.3.2",
     "core-js": "^2.4.1",
+    "immutable": "^3.8.1",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.2",
     "zone.js": "0.8.16"
