--- a/package.json
+++ b/package.json
@@ -29,52 +29,52 @@
     "npm": ">= 3"
   },
   "dependencies": {
-    "@angular/common": "5.0.0-beta.1",
-    "@angular/compiler": "5.0.0-beta.1",
-    "@angular/compiler-cli": "5.0.0-beta.1",
-    "@angular/core": "5.0.0-beta.1",
-    "@angular/forms": "5.0.0-beta.1",
-    "@angular/http": "^5.0.0-beta.1",
-    "@angular/platform-browser": "5.0.0-beta.1",
-    "@angular/platform-browser-dynamic": "5.0.0-beta.1",
-    "@angular/router": "5.0.0-beta.1",
+    "@angular/common": "5.0.0-beta.4",
+    "@angular/compiler": "5.0.0-beta.4",
+    "@angular/compiler-cli": "5.0.0-beta.4",
+    "@angular/core": "5.0.0-beta.4",
+    "@angular/forms": "5.0.0-beta.4",
+    "@angular/http": "^5.0.0-beta.4",
+    "@angular/platform-browser": "5.0.0-beta.4",
+    "@angular/platform-browser-dynamic": "5.0.0-beta.4",
+    "@angular/router": "5.0.0-beta.4",
     "@ngrx/core": "^1.2.0",
-    "@ngrx/store": "^4.0.2",
+    "@ngrx/store": "^4.0.3",
     "angular-in-memory-web-api": "^0.3.2",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.0",
     "immutable": "^3.8.1",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.4.2",
-    "zone.js": "0.8.16"
+    "rxjs": "^5.4.3",
+    "zone.js": "^0.8.16"
   },
   "devDependencies": {
-    "@ngtools/webpack": "^1.6.0-rc.1",
+    "@ngtools/webpack": "^1.6.1",
     "@types/core-js": "^0.9.42",
-    "@types/node": "^7.0.32",
+    "@types/node": "^8.0.24",
     "angular-router-loader": "^0.6.0",
     "angular2-template-loader": "^0.6.2",
-    "awesome-typescript-loader": "^3.1.3",
+    "awesome-typescript-loader": "^3.2.3",
     "codelyzer": "^3.1.2",
-    "compression-webpack-plugin": "^0.4.0",
+    "compression-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.0.1",
-    "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.29.0",
-    "json-loader": "^0.5.4",
+    "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.30.1",
     "jest": "^20.0.4",
     "jest-preset-angular": "^2.0.5",
-    "node-sass": "^4.1.1",
+    "json-loader": "^0.5.7",
+    "node-sass": "^4.5.3",
     "raw-loader": "^0.5.1",
-    "rimraf": "^2.6.0",
+    "rimraf": "^2.6.1",
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.1",
     "ts-helpers": "^1.1.2",
-    "ts-loader": "^2.2.2",
-    "ts-node": "^3.2.0",
-    "tslint": "^4.3.1",
-    "tslint-loader": "^3.3.0",
+    "ts-loader": "^2.3.3",
+    "ts-node": "^3.3.0",
+    "tslint": "^5.6.0",
+    "tslint-loader": "^3.5.3",
     "typescript": "^2.4.2",
-    "webpack": "^3.4.0",
-    "webpack-dev-server": "^2.5.0",
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1",
     "webpack-md5-hash": "0.0.5",
     "webpack-merge": "^4.1.0"
   },
