--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   },
   "devDependencies": {
     "@ngtools/webpack": "^1.6.1",
-    "@types/core-js": "^0.9.42",
+    "@types/core-js": "^0.9.43",
     "@types/node": "^8.0.24",
     "angular-router-loader": "^0.6.0",
     "angular2-template-loader": "^0.6.2",
@@ -93,7 +93,8 @@
       "src/**/*.{ts,js}",
       "!**/assets/**",
       "!**/node_modules/**",
-      "!src/**/*.spec.ts"
+      "!src/**/*.spec.ts",
+      "!src/**/*.d.ts"
     ]
   }
 }
