--- a/package.json
+++ b/package.json
@@ -29,15 +29,15 @@
     "npm": ">= 3"
   },
   "dependencies": {
-    "@angular/common": "5.0.0-beta.1",
-    "@angular/compiler": "5.0.0-beta.1",
-    "@angular/compiler-cli": "5.0.0-beta.1",
-    "@angular/core": "5.0.0-beta.1",
-    "@angular/forms": "5.0.0-beta.1",
-    "@angular/http": "^5.0.0-beta.1",
-    "@angular/platform-browser": "5.0.0-beta.1",
-    "@angular/platform-browser-dynamic": "5.0.0-beta.1",
-    "@angular/router": "5.0.0-beta.1",
+    "@angular/common": "5.0.0-rc.3",
+    "@angular/compiler": "5.0.0-rc.3",
+    "@angular/compiler-cli": "5.0.0-rc.3",
+    "@angular/core": "5.0.0-rc.3",
+    "@angular/forms": "5.0.0-rc.3",
+    "@angular/http": "^5.0.0-rc.3",
+    "@angular/platform-browser": "5.0.0-rc.3",
+    "@angular/platform-browser-dynamic": "5.0.0-rc.3",
+    "@angular/router": "5.0.0-rc.3",
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^4.0.2",
     "angular-in-memory-web-api": "^0.3.2",
