--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "npm": ">= 3"
   },
   "dependencies": {
-    "@angular/common": "5.0.0-rc.9",
-    "@angular/compiler": "5.0.0-rc.9",
-    "@angular/compiler-cli": "5.0.0-rc.9",
-    "@angular/core": "5.0.0-rc.9",
-    "@angular/forms": "5.0.0-rc.9",
-    "@angular/platform-browser": "5.0.0-rc.9",
-    "@angular/platform-browser-dynamic": "5.0.0-rc.9",
-    "@angular/router": "5.0.0-rc.9",
+    "@angular/common": "5.0.0",
+    "@angular/compiler": "5.0.0",
+    "@angular/compiler-cli": "5.0.0",
+    "@angular/core": "5.0.0",
+    "@angular/forms": "5.0.0",
+    "@angular/platform-browser": "5.0.0",
+    "@angular/platform-browser-dynamic": "5.0.0",
+    "@angular/router": "5.0.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^4.0.3",
     "angular-in-memory-web-api": "^0.5.1",
