--- a/package.json
+++ b/package.json
@@ -4,23 +4,12 @@
   "description": "jazzyredfaces' lab session",
   "main": "index.js",
   "scripts": {
-    "start": "npm run server",
-    "server": "npm run server:local",
-    "server:local": "NODE_ENV=local webpack-dev-server --config client-config/webpack.dev.js --progress --profile --watch --content-base src/",
-    "server:local:was": "NODE_ENV=local-server webpack-dev-server --config client-config/webpack.dev.js --progress --profile --watch --content-base src/",
-    "server:dev": "NODE_ENV=dev webpack-dev-server --config client-config/webpack.dev.js --progress --profile --watch --content-base src/",
-    "clean": "rm -rf node_modules ./client-config/coverage dist",
-    "clean:dist": "rm -rf ./dist",
-    "clean:install": "npm run clean && npm install",
-    "build": "npm run build:local",
-    "build:local": "NODE_ENV=local node ./node_modules/.bin/webpack --config client-config/webpack.dev.js --progress --profile --colors --display-error-details --display-cached --hide-modules",
-    "build:local:was": "NODE_ENV=local-server node ./node_modules/.bin/webpack --config client-config/webpack.dev.js --progress --profile --colors --display-error-details --display-cached --hide-modules && npm run dist-to-was",
-    "build:prod": "NODE_ENV=prod node ./node_modules/.bin/webpack --config client-config/webpack.prod.js --progress --profile --colors --display-error-details --display-cached --hide-modules",
-    "build:aot": "NODE_ENV=prod node ./node_modules/.bin/webpack --config client-config/webpack.aot.js --progress --profile --colors --display-error-details --display-cached --hide-modules",
-    "test": "npm run test:watch",
-    "test:unit": "jest",
-    "test:watch": "jest --watch",
-    "test:prod": "jest --collectCoverage=true"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
   "author": "jazzyredface",
   "license": "ISC",
@@ -30,8 +19,6 @@
   },
   "dependencies": {
     "@angular/common": "5.0.0",
-    "@angular/compiler": "5.0.0",
-    "@angular/compiler-cli": "5.0.0",
     "@angular/core": "5.0.0",
     "@angular/forms": "5.0.0",
     "@angular/platform-browser": "5.0.0",
@@ -39,43 +26,33 @@
     "@angular/router": "5.0.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^4.0.3",
-    "angular-in-memory-web-api": "^0.5.1",
     "core-js": "^2.5.0",
-    "immutable": "^3.8.1",
-    "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.3",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@ngtools/webpack": "^1.8.0",
-    "@types/core-js": "^0.9.43",
-    "@types/node": "^8.0.46",
-    "angular-router-loader": "^0.6.0",
-    "angular2-template-loader": "^0.6.2",
-    "awesome-typescript-loader": "^3.2.3",
-    "codelyzer": "^3.2.2",
-    "compression-webpack-plugin": "^1.0.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
+    "@angular/cli": "1.5.0",
+    "@angular/compiler": "5.0.0",
+    "@angular/compiler-cli": "5.0.0",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
+    "angular-in-memory-web-api": "^0.5.1",
     "jest": "^21.2.1",
     "jest-preset-angular": "^4.0.1",
-    "json-loader": "^0.5.7",
-    "node-sass": "^4.5.3",
-    "raw-loader": "^0.5.1",
-    "rimraf": "^2.6.1",
-    "sass-loader": "^6.0.6",
-    "source-map-loader": "^0.2.1",
-    "ts-helpers": "^1.1.2",
-    "ts-loader": "^3.1.0",
-    "ts-node": "^3.3.0",
-    "tslint": "^5.8.0",
-    "tslint-loader": "^3.5.3",
-    "typescript": "^2.6.1",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.3",
-    "webpack-md5-hash": "0.0.5",
-    "webpack-merge": "^4.1.0"
+    "codelyzer": "~3.2.0",
+    "jasmine-core": "~2.6.2",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.1.2",
+    "ts-node": "~3.2.0",
+    "tslint": "~5.7.0",
+    "typescript": "~2.4.2"
   },
   "jest": {
     "preset": "jest-preset-angular",
