--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
     "@angular/service-worker": "^5.2.9",
     "core-js": "^2.5.4",
     "rxjs": "^5.5.8",
-    "zone.js": "^0.8.23"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.1",
+    "@angular/cli": "^1.7.4",
     "@angular/compiler-cli": "^5.2.9",
     "@angular/language-service": "^5.2.9",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.103",
+    "@types/node": "^6.0.104",
     "angular-in-memory-web-api": "0.5.1",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
