--- a/package.json
+++ b/package.json
@@ -18,27 +18,27 @@
     "npm": ">= 3"
   },
   "dependencies": {
-    "@angular/animations": "7.0.0-rc.1",
-    "@angular/common": "7.0.0-rc.1",
-    "@angular/compiler": "7.0.0-rc.1",
-    "@angular/core": "7.0.0-rc.1",
-    "@angular/forms": "7.0.0-rc.1",
-    "@angular/http": "7.0.0-rc.1",
-    "@angular/platform-browser": "7.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "7.0.0-rc.1",
-    "@angular/router": "7.0.0-rc.1",
+    "@angular/animations": "7.0.0",
+    "@angular/common": "7.0.0",
+    "@angular/compiler": "7.0.0",
+    "@angular/core": "7.0.0",
+    "@angular/forms": "7.0.0",
+    "@angular/http": "7.0.0",
+    "@angular/platform-browser": "7.0.0",
+    "@angular/platform-browser-dynamic": "7.0.0",
+    "@angular/router": "7.0.0",
     "core-js": "^2.5.7",
     "rxjs": "6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.9.0-rc.3",
-    "@angular/cli": "^7.0.0-rc.3",
-    "@angular/compiler-cli": "7.0.0-rc.1",
-    "@angular/language-service": "7.0.0-rc.1",
+    "@angular-devkit/build-angular": "^0.10.1",
+    "@angular/cli": "^7.0.1",
+    "@angular/compiler-cli": "7.0.0",
+    "@angular/language-service": "7.0.0",
     "@types/jasmine": "^2.8.9",
     "@types/jasminewd2": "^2.0.5",
-    "@types/node": "^10.11.7",
+    "@types/node": "^10.12.0",
     "codelyzer": "^4.5.0",
     "jasmine-core": "~3.2.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -51,8 +51,8 @@
     "karma-jasmine-html-reporter": "^1.3.1",
     "protractor": "~5.4.1",
     "ts-node": "~7.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "3.1.1"
+    "tslint": "~5.11.0",
+    "typescript": "3.1.3"
   },
   "jest": {
     "preset": "jest-preset-angular",
