--- a/package.json
+++ b/package.json
@@ -27,30 +27,30 @@
     "@angular/platform-browser": "7.1.4",
     "@angular/platform-browser-dynamic": "7.1.4",
     "@angular/router": "7.1.4",
-    "core-js": "^2.5.7",
+    "core-js": "^2.6.1",
     "rxjs": "6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular-devkit/build-angular": "^0.11.4",
     "@angular/cli": "^7.1.4",
     "@angular/compiler-cli": "7.1.4",
     "@angular/language-service": "7.1.4",
-    "@types/jasmine": "^3.3.0",
+    "@types/jasmine": "^3.3.5",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^10.12.10",
+    "@types/node": "^10.12.18",
     "codelyzer": "^4.5.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
     "jest": "^23.6.0",
-    "jest-preset-angular": "^6.0.0-rc.0",
-    "karma": "^3.1.1",
+    "jest-preset-angular": "^6.0.2",
+    "karma": "^3.1.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.1",
+    "protractor": "^5.4.2",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
     "typescript": "3.1.6"
