--- a/angular.json
+++ b/angular.json
@@ -94,7 +94,7 @@
       }
     },
     "redface-lab-e2e": {
-      "root": "",
+      "root": "e2e",
       "sourceRoot": "",
       "projectType": "application",
       "architect": {
