--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "npm": ">= 3"
   },
   "dependencies": {
-    "@angular/animations": "8.0.0-beta.2",
-    "@angular/common": "8.0.0-beta.2",
-    "@angular/compiler": "8.0.0-beta.2",
-    "@angular/core": "8.0.0-beta.2",
-    "@angular/forms": "8.0.0-beta.2",
-    "@angular/http": "8.0.0-beta.2",
-    "@angular/platform-browser": "8.0.0-beta.2",
-    "@angular/platform-browser-dynamic": "8.0.0-beta.2",
-    "@angular/router": "8.0.0-beta.2",
+    "@angular/animations": "8.0.0-beta.3",
+    "@angular/common": "8.0.0-beta.3",
+    "@angular/compiler": "8.0.0-beta.3",
+    "@angular/core": "8.0.0-beta.3",
+    "@angular/forms": "8.0.0-beta.3",
+    "@angular/http": "8.0.0-beta.3",
+    "@angular/platform-browser": "8.0.0-beta.3",
+    "@angular/platform-browser-dynamic": "8.0.0-beta.3",
+    "@angular/router": "8.0.0-beta.3",
     "core-js": "^2.6.3",
     "rxjs": "6.4.0",
     "tslib": "^1.9.0",
@@ -34,12 +34,13 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.12.3",
-    "@angular/cli": "^7.3.0",
-    "@angular/compiler-cli": "8.0.0-beta.2",
-    "@angular/language-service": "8.0.0-beta.2",
+    "@angular/cli": "^7.3.1",
+    "@angular/compiler-cli": "8.0.0-beta.3",
+    "@angular/language-service": "8.0.0-beta.3",
     "@types/jasmine": "^3.3.8",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^10.12.18",
+    "angular-in-memory-web-api": "^0.8.0",
     "codelyzer": "^4.5.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
