--- a/package.json
+++ b/package.json
@@ -18,30 +18,29 @@
     "npm": ">= 3"
   },
   "dependencies": {
-    "@angular/animations": "8.0.0-beta.13",
-    "@angular/common": "8.0.0-beta.13",
-    "@angular/compiler": "8.0.0-beta.13",
-    "@angular/core": "8.0.0-beta.13",
-    "@angular/forms": "8.0.0-beta.13",
-    "@angular/http": "8.0.0-beta.10",
-    "@angular/platform-browser": "8.0.0-beta.13",
-    "@angular/platform-browser-dynamic": "8.0.0-beta.13",
-    "@angular/router": "8.0.0-beta.13",
+    "@angular/animations": "8.0.0-beta.14",
+    "@angular/common": "8.0.0-beta.14",
+    "@angular/compiler": "8.0.0-beta.14",
+    "@angular/core": "8.0.0-beta.14",
+    "@angular/forms": "8.0.0-beta.14",
+    "@angular/platform-browser": "8.0.0-beta.14",
+    "@angular/platform-browser-dynamic": "8.0.0-beta.14",
+    "@angular/router": "8.0.0-beta.14",
     "core-js": "^2.6.3",
-    "rxjs": "6.4.0",
+    "rxjs": "6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "^0.9.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.3",
-    "@angular/cli": "^8.0.0-beta.11",
-    "@angular/compiler-cli": "8.0.0-beta.13",
-    "@angular/language-service": "8.0.0-beta.13",
+    "@angular-devkit/build-angular": "~0.800.0-beta.13",
+    "@angular/cli": "^8.0.0-beta.18",
+    "@angular/compiler-cli": "8.0.0-beta.14",
+    "@angular/language-service": "8.0.0-beta.14",
     "@types/jasmine": "^3.3.8",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^10.12.18",
     "angular-in-memory-web-api": "^0.8.0",
-    "codelyzer": "^4.5.0",
+    "codelyzer": "^5.0.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
     "jest": "^23.6.0",
@@ -54,7 +53,7 @@
     "protractor": "^5.4.2",
     "ts-node": "~7.0.1",
     "tslint": "~5.12.1",
-    "typescript": "^3.4.3"
+    "typescript": "^3.4.5"
   },
   "jest": {
     "preset": "jest-preset-angular",
