--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@angular/platform-browser": "8.0.0-beta.14",
     "@angular/platform-browser-dynamic": "8.0.0-beta.14",
     "@angular/router": "8.0.0-beta.14",
-    "core-js": "^2.6.3",
+    "core-js": "^2.6.5",
     "rxjs": "6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "^0.9.0"
@@ -36,18 +36,18 @@
     "@angular/cli": "^8.0.0-beta.18",
     "@angular/compiler-cli": "8.0.0-beta.14",
     "@angular/language-service": "8.0.0-beta.14",
-    "@types/jasmine": "^3.3.8",
+    "@types/jasmine": "^3.3.12",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^10.12.18",
+    "@types/node": "^10.14.5",
     "angular-in-memory-web-api": "^0.8.0",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
     "jest": "^23.6.0",
-    "jest-preset-angular": "^7.0.0-alpha.2",
+    "jest-preset-angular": "^7.1.0",
     "karma": "^3.1.4",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "^5.4.2",
