--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "npm": ">= 3"
   },
   "dependencies": {
-    "@angular/animations": "8.0.0-rc.5",
-    "@angular/common": "8.0.0-rc.5",
-    "@angular/compiler": "8.0.0-rc.5",
-    "@angular/core": "8.0.0-rc.5",
-    "@angular/forms": "8.0.0-rc.5",
-    "@angular/platform-browser": "8.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "8.0.0-rc.5",
-    "@angular/router": "8.0.0-rc.5",
+    "@angular/animations": "8.0.0",
+    "@angular/common": "8.0.0",
+    "@angular/compiler": "8.0.0",
+    "@angular/core": "8.0.0",
+    "@angular/forms": "8.0.0",
+    "@angular/platform-browser": "8.0.0",
+    "@angular/platform-browser-dynamic": "8.0.0",
+    "@angular/router": "8.0.0",
     "core-js": "^2.6.8",
     "rxjs": "6.5.2",
     "tslib": "^1.9.0",
@@ -34,8 +34,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.1",
     "@angular/cli": "^8.0.1",
-    "@angular/compiler-cli": "8.0.0-rc.5",
-    "@angular/language-service": "8.0.0-rc.5",
+    "@angular/compiler-cli": "8.0.0",
+    "@angular/language-service": "8.0.0",
     "@types/jasmine": "^3.3.12",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^10.14.7",
